# Rinax

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: main.rs
wix/: main.wxs
