[package]
name = "rms"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Korphere/Rinax"
authors = ["KoHaRxnP"]
description = "Rinax: A modern gaming-focused utility"
homepage = "https://github.com/Korphere/Rinax"

[package.metadata.wix]
upgrade-guid = "7E186B6A-9D5D-4EF2-8E2B-08C40F3C8207"
path-guid = "B56FB1C1-E162-41FC-8A22-21214F73F2E7"
license = false
eula = false

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4" # 削除時刻を記録する場合
cargo-dist = "0.28.0"

[[bin]]
name = "rm"  # これで生成されるバイナリが rm.exe になる
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
